[FEATURE] Añadidas pruebas unitarias y de integracion